feat: adiciona documentacao show e update
