# app/Http/Controllers/StudentController.php
@@ -67,7 +67,6 @@ class StudentController extends Controller
         return response()->json($student, Response::HTTP_CREATED);
     }
 
-
     /**
      * @OA\Get(
      *     path="/api/alunos",
@@ -102,6 +101,39 @@ class StudentController extends Controller
         return response()->json($alunos, Response::HTTP_OK);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/alunos/{id}",
+     *     operationId="getStudentById",
+     *     summary="Recupera um aluno específico com base no id",
+     *     tags={"Alunos"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer"),
+     *         description="ID do aluno"
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Detalhes do aluno recuperados com sucesso",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer", example=1),
+     *             @OA\Property(property="nome", type="string", example="João Silva"),
+     *             @OA\Property(property="idade", type="integer", example=20),
+     *             @OA\Property(property="nota_primeiro_semestre", type="number", format="float", example=8.5),
+     *             @OA\Property(property="nota_segundo_semestre", type="number", format="float", example=7.9),
+     *             @OA\Property(property="nome_professor", type="string", example="Professor A"),
+     *             @OA\Property(property="numero_sala", type="integer", example=101),
+     *             @OA\Property(property="created_at", type="string", format="date-time", example="2024-08-21T18:20:07.000000Z"),
+     *             @OA\Property(property="updated_at", type="string", format="date-time", example="2024-08-21T18:20:07.000000Z")
+     *         )
+     *     ),
+     *     @OA\Response(response=404,description="Aluno não encontrado"),
+     *     @OA\Response(response=500, description="Erro interno no servidor")
+     * )
+     */
     public function show(ListOneStudentService $listOneStudentService, $id)
     {
         $student = $listOneStudentService->handle($id);
@@ -111,6 +143,51 @@ class StudentController extends Controller
         return response()->json($student, Response::HTTP_OK);
     }
 
+    /**
+     * @OA\Put(
+     *     path="/api/alunos/{id}",
+     *     operationId="updateStudent",
+     *     tags={"Alunos"},
+     *     summary="Atualiza um aluno existente. Todos os campos são opcionais.",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID do aluno a ser atualizado",
+     *         @OA\Schema(type="integer", example=1)
+     *     ),
+     *     @OA\RequestBody(
+     *         required=false,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="nome", type="string", example="João Silva"),
+     *             @OA\Property(property="idade", type="integer", example=21),
+     *             @OA\Property(property="nota_primeiro_semestre", type="number", format="float", example=8.7),
+     *             @OA\Property(property="nota_segundo_semestre", type="number", format="float", example=8.1),
+     *             @OA\Property(property="nome_professor", type="string", example="Professor B"),
+     *             @OA\Property(property="numero_sala", type="integer", example=102)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Atualização realizada com sucesso",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer", example=1),
+     *             @OA\Property(property="nome", type="string", example="João Silva"),
+     *             @OA\Property(property="idade", type="integer", example=21),
+     *             @OA\Property(property="nota_primeiro_semestre", type="number", format="float", example=8.7),
+     *             @OA\Property(property="nota_segundo_semestre", type="number", format="float", example=8.1),
+     *             @OA\Property(property="nome_professor", type="string", example="Professor B"),
+     *             @OA\Property(property="numero_sala", type="integer", example=102),
+     *             @OA\Property(property="updated_at", type="string", format="date-time", example="2024-08-21T19:20:07.000000Z")
+     *         )
+     *     ),
+     *     @OA\Response(response=400, description="Dados inválidos"),
+     *     @OA\Response(response=404, description="Aluno não encontrado"),
+     *     @OA\Response(response=500, description="Erro interno no servidor")
+     * )
+     */
     public function update(UpdateStudentRequest $request, UpdateOneStudentService $updateOneStudentService, $id)
     {
         $data = $request->all();
